--- a/index.html
+++ b/index.html
@@ -9,25 +9,14 @@
 <body>
     <h1>david</h1>
     <h2>Frontend Simplified</h2>
-    <p>Hello <i>Lorem ipsum dolor sit amet.</i> bye</p>
+    <p>paragrah <i>Lorem ipsum dolor sit amet.</i> paragraph</p>
+    <button>321</button>
+    <div>
+        <b>Bold</b>
+    </div>
 
-    <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis temporibus repellendus incidunt dolorem praesentium inventore mollitia, quisquam aliquam? Harum dolor ratione sit aut illum ab quae voluptatibus officiis beatae ipsa?</i></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nulla eveniet iste blanditiis ipsam autem eligendi incidunt maxime inventore laudantium est ex, laboriosam quidem consequuntur maiores sit distinctio esse reiciendis.</p>
-    <p>123</p>
-    <p>123</p>
-    <p>123</p>
-    <p>123</p>
-    <p>123</p>
-    <BUTTON>321</BUTTON>
-    <b>321</b>
-    <div>
-        <BUTTON>321</BUTTON>
-        <BUTTON>321</BUTTON>
     </div>
-    <B>bOLD</B>
-    <div>
-        <B>bOLD</B>
-        <B>bOLD</B>
-    </div>
+    <a href="https://discord.gg/frontend" Target="_blank">discord</a>
+    <a href="dashboard.html"target="_blank">Dashboard</a>
 </body>
 </html>
